[gd_scene load_steps=18 format=2]

[ext_resource path="res://Intro/Elements/CubeScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Intro/Elements/RawVertexData.gd" type="Script" id=2]
[ext_resource path="res://Intro/Elements/VertexRaw.tscn" type="PackedScene" id=3]
[ext_resource path="res://Shared/theme/gdquest.theme" type="Theme" id=4]
[ext_resource path="res://Intro/Elements/ShaderPipelineIntro.gd" type="Script" id=5]
[ext_resource path="res://Intro/Elements/VertexCodeAnim.tscn" type="PackedScene" id=6]
[ext_resource path="res://Intro/Elements/LineDrawers.gd" type="Script" id=7]
[ext_resource path="res://Intro/Elements/Title.gd" type="Script" id=8]
[ext_resource path="res://Intro/Elements/Pixel.tscn" type="PackedScene" id=9]
[ext_resource path="res://Intro/Elements/Pixels.gd" type="Script" id=10]
[ext_resource path="res://Shared/environments/2d_level_environment.tres" type="Environment" id=11]
[ext_resource path="res://Shared/theme/fonts/font_title.tres" type="DynamicFont" id=12]
[ext_resource path="res://Intro/Elements/LineDrawer.tscn" type="PackedScene" id=13]

[sub_resource type="World" id=1]

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("ScaledView")

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("Viewport")

[node name="ShaderPipelineIntro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1920, 1080 )
own_world = true
world = SubResource( 1 )
handle_input_locally = false
msaa = 4
render_target_update_mode = 3

[node name="Spatial" parent="Viewport" instance=ExtResource( 1 )]

[node name="ScaledView" type="Viewport" parent="."]
size = Vector2( 100, 56 )

[node name="TextureRect" type="TextureRect" parent="ScaledView"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true
stretch_mode = 1
flip_v = true

[node name="Scaled" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 3 )
expand = true
stretch_mode = 1
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullRes" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 4 )
expand = true
stretch_mode = 1
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 30.0
margin_bottom = 63.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 12 )
text = "Raw Vertex Data"
align = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Title"]

[node name="Pixels" type="Node2D" parent="."]
script = ExtResource( 10 )
Pixel = ExtResource( 9 )
width = 23
height = 21

[node name="RawVertexData" type="Node2D" parent="."]
script = ExtResource( 2 )
Vertex = ExtResource( 3 )
theme = ExtResource( 4 )
v_code = ExtResource( 6 )

[node name="Tween" type="Tween" parent="RawVertexData"]

[node name="LineDrawers" type="Node2D" parent="."]
script = ExtResource( 7 )
LineDrawer = ExtResource( 13 )

[node name="Tween" type="Tween" parent="LineDrawers"]

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 11 )
